# GQA_SQL_Service

./: Dockerfile  README.md  pyproject.toml
app/: server.py
